[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/UI/BackgroundMenu.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/UI/Adventurer.ttf"

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/UI/Adventurer.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/UI/Adventurer.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/UI/Adventurer.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[node name="Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 18.0
margin_top = 27.0
margin_right = 301.0
margin_bottom = 133.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 283.0
margin_bottom = 28.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 283.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.994316, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Super Pixel Adventure"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 283.0
margin_bottom = 106.0

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 283.0
margin_bottom = 22.0

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 117.0
margin_right = 166.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.490196, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 0.0470588, 0.0705882, 0.741176, 1 )
text = "Start"
flat = true

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 283.0
margin_bottom = 48.0

[node name="About" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer3"]
margin_left = 116.0
margin_right = 167.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.941176, 0.490196, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 0.0470588, 0.0705882, 0.741176, 1 )
text = "About"
flat = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 283.0
margin_bottom = 74.0

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 122.0
margin_right = 160.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.941176, 0.490196, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 0.0470588, 0.0705882, 0.741176, 1 )
text = "Exit"
flat = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer2/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer3/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer/Exit" to="." method="_on_Exit_pressed"]
